NLP TP's/texts/robotics/robotics.stackexchange_0000086758.txt
Q:

catkin_make error

I am trying to do trajectory planning for a robot arm and for that I have a cpp code. When I try to build it I receive an error.
I am using ROS Kinetic in Ubuntu 16.04. I am new to ROS and I would be grateful for the help.
Thanks in advance.
The error shown in the terminal is as follows:
Base path: /home/kashyap/catkin_ws
Source space: /home/kashyap/catkin_ws/src
Build space: /home/kashyap/catkin_ws/build
Devel space: /home/kashyap/catkin_ws/devel
Install space: /home/kashyap/catkin_ws/install
####
#### Running command: "make cmake_check_build_system" in "/home/kashyap/catkin_ws/build"
####
####
#### Running command: "make -j8 -l8" in "/home/kashyap/catkin_ws/build"
####
[ 66%] Built target media_files
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_LaserScannerSignal
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_BatteryState
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_LaserTrajCmd
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_PressureState
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_AccessPoint
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_AccelerometerState
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_PeriodicCmd
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_BatteryServer2
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_PowerState
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_BatteryState2
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_DashboardState
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_SetPeriodicCmd
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_SetLaserTrajCmd
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_PowerBoardState
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_BatteryServer
[ 66%] Built target geometry_msgs_generate_messages_lisp
[ 66%] Built target std_msgs_generate_messages_lisp
[ 66%] Built target geometry_msgs_generate_messages_nodejs
[ 66%] Built target std_msgs_generate_messages_nodejs
[ 66%] Built target geometry_msgs_generate_messages_eus
[ 66%] Built target std_msgs_generate_messages_eus
[ 66%] Built target geometry_msgs_generate_messages_py
[ 66%] Built target _pr2_msgs_generate_messages_check_deps_GPUStatus
[ 66%] Built target geometry_msgs_generate_messages_cpp
[ 66%] Built target std_msgs_generate_messages_py
[ 66%] Built target std_msgs_generate_messages_cpp
Scanning dependencies of target set_pose1_cpp
[ 66%] Built target kinematic_model_tutorial
[ 67%] Built target ros_api_tutorial
[ 67%] Building CXX object igus_trajectory_planning_3/CMakeFiles/set_pose1_cpp.dir/src/set_pose1_cpp.cpp.o
[ 68%] Built target planning_scene_tutorial
[ 69%] Built target planning_scene_ros_api_tutorial
[ 69%] Built target planning_pipeline_tutorial
[ 70%] Built target motion_planning_api_tutorial
[ 70%] Built target move_group_interface_tutorial
[ 71%] Built target state_display_tutorial
[ 76%] Built target pr2_msgs_generate_messages_lisp
[ 80%] Built target pr2_msgs_generate_messages_nodejs
[ 82%] Built target interactivity_tutorial
[ 87%] Built target pr2_msgs_generate_messages_eus
[ 88%] Built target pick_place_tutorial
[ 93%] Built target pr2_msgs_generate_messages_py
[ 97%] Built target pr2_msgs_generate_messages_cpp
[ 98%] Built target collision_contact_tutorial
[100%] Built target attached_body_tutorial
[100%] Built target pr2_msgs_generate_messages
/home/kashyap/catkin_ws/src/igus_trajectory_planning_3/src/set_pose1_cpp.cpp: In function ‘int main(int, char**)’:
/home/kashyap/catkin_ws/src/igus_trajectory_planning_3/src/set_pose1_cpp.cpp:44:55: error: ‘move_group’ was not declared in this scope
 moveit::planning_interface::MoveItErrorCode success = move_group.plan(my_plan);
                                                       ^
/home/kashyap/catkin_ws/src/igus_trajectory_planning_3/src/set_pose1_cpp.cpp:44:71: error: ‘my_plan’ was not declared in this scope
 moveit::planning_interface::MoveItErrorCode success = move_group.plan(my_plan);
                                                                       ^
igus_trajectory_planning_3/CMakeFiles/set_pose1_cpp.dir/build.make:62: recipe for target 'igus_trajectory_planning_3/CMakeFiles/set_pose1_cpp.dir/src/set_pose1_cpp.cpp.o' failed
make[2]: *** [igus_trajectory_planning_3/CMakeFiles/set_pose1_cpp.dir/src/set_pose1_cpp.cpp.o] Error 1
CMakeFiles/Makefile2:2591: recipe for target 'igus_trajectory_planning_3/CMakeFiles/set_pose1_cpp.dir/all' failed
make[1]: *** [igus_trajectory_planning_3/CMakeFiles/set_pose1_cpp.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
Invoking "make -j8 -l8" failed

Edit: Hey, here's the CPP code
int main(int argc, char **argv)
{
    ros::init(argc, argv, "set_pose1_cpp");
    ros::NodeHandle node_handle;
    ros::AsyncSpinner spinner(1);
    spinner.start();
    moveit::planning_interface::MoveGroupInterface group("igus");
    ros::Publisher display_publisher = node_handle.advertise<moveit_msgs::DisplayTrajectory>("/move_group/display_planned_path", 1, true);
    moveit_msgs::DisplayTrajectory display_trajectory;
    geometry_msgs::Pose target_pose1;
    target_pose1.orientation.w = 1.0;
    target_pose1.position.x = 0.28;
    target_pose1.position.y = -0.7;
    target_pose1.position.z = 1.0;
    group.setPoseTarget(target_pose1);
    moveit::planning_interface::MoveItErrorCode success = move_group.plan(my_plan);
    ROS_INFO_NAMED("igus_trajectory_planning_3", "Visualizing plan 1 (pose goal) %s", success == moveit_msgs::MoveItErrorCodes::SUCCESS ? "" : "FAILED"); 
    sleep(5.0);
    std::vector<double> group_variable_values;
    group.getCurrentState()->copyJointGroupPositions(group.getCurrentState()->getRobotModel()->getJointModelGroup(group.getName()), group_variable_values);
    sleep(5.0);
    ros::shutdown();
    return 0;
}

Originally posted by Kashyap.m94 on ROS Answers with karma: 46 on 2018-04-24
Post score: 0

Original comments
Comment by PeteBlackerThe3rd on 2018-04-25:
Looks like a simple C++ error. If you can post your source code also we will be able to help you
Comment by Kashyap.m94 on 2018-04-26:
Here's the code

A:

As the error states, you haven't declared move_group or my_plan.  You do already have a MoveGroupInterface but you called it group (i.e., not move_group).  Just change the names to match.
As for the missing my_plan, you can put a line before the move_group.plan(my_plan) call like the following:
moveit::planning_interface::MoveGroupInterface::Plan my_plan;
You already probably found it but you can reference the tutorial here.  The full tutorial code for the MoveGroupInterface can be found here.
Good luck!

Originally posted by BrettHemes with karma: 525 on 2018-04-26
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by Kashyap.m94 on 2018-04-26:
Worked. Thanks for the help.

